p2/confs/app-one.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: app-one-service 
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app:  app-one
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-system
  name: app-one
spec:
  selector:
    matchLabels:
      app: app-one
  replicas: 1
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
      - name: app-one
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: app-one-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: app-one-volume
        configMap:
          name: app-one
