p2/confs/app-three.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: app-three-service
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: app-three
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-system
  name: app-three
spec:
  selector:
    matchLabels:
      app: app-three
  replicas: 1
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
      - name: app-three
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: app-three-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: app-three-volume
        configMap:
          name: app-three
