p2/confs/app-two.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: app-two-service
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app:  app-two
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-system
  name: app-two
spec:
  selector:
    matchLabels:
      app: app-two
  replicas: 3
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
      - name: app-two
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: app-two-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: app-two-volume
        configMap:
          name: app-two
